Created buildings. Started working on sell and buy items

--- a/PeopleVille.csproj
+++ b/PeopleVille.csproj
@@ -8,19 +8,28 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="LocationClass\**" />
+    <Compile Remove="PeopleClasses\NewFolder\**" />
     <Compile Remove="People\**" />
+    <EmbeddedResource Remove="LocationClass\**" />
+    <EmbeddedResource Remove="PeopleClasses\NewFolder\**" />
     <EmbeddedResource Remove="People\**" />
+    <None Remove="LocationClass\**" />
+    <None Remove="PeopleClasses\NewFolder\**" />
     <None Remove="People\**" />
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="buildingClass\buildings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="ItemClass\items.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="items.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <Folder Include="ItemClass\" />
-    <Folder Include="LocationClass\" />
-    <Folder Include="PeopleClasses\NewFolder\" />
-    <Folder Include="People\" />
   </ItemGroup>
 
 </Project>
